# combinator_api

./: Pipfile  README.md  pyproject.toml
combinatorapi/: main.py  requirements.txt
combinatorapi/.deta/: prog_info  state
combinatorapi/helper/: __init__.py  article.py
combinatorapi/helper/schemas/: article.py
combinatorapi/helper/web_scraper/: combinator.py  web_scraper.py
